# SocketC

./: commands.json
20251106-SocketC/: CMakeLists.txt
20251106-SocketC/src/: signal.c  unp.h  wraplib.c  wrapsock.c
20251106-SocketC/src/client/: echo_client.c  thread-client.c
20251106-SocketC/src/server/: coroutine_tasks_server.cpp  fork-server.c  prethread_server_kernel_schedule.c  prethread_server_user_schedule.c  threads-server.c
20251106-SocketC/src/thread/: unpthread.h
20251113-CraieLibProject/: CMakeLists.txt  commands.json  dummy.txt  json_command.txt  main.cpp
20251411-SocketC++/: Reactor_pattern
20251411-SocketC++/build-reactor_server-Desktop-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
20251411-SocketC++/build-reactor_server-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-1f617620f15a657565ea.json  cmakeFiles-v1-662967bdf68c9ae10e7e.json  codemodel-v2-745fbe4409569170d6f8.json  index-2025-11-18T01-47-00-0075.json  target-reactor_server-Debug-bfbb1c1a7a7f0e7c94b2.json
20251411-SocketC++/reactor_server/: CMakeLists.txt
IPC/: CMakeLists.txt  IPC_MsgQueue.c  IPC_pipe.c
SocketC/: CMakeLists.txt  CMakeLists.txt.user.f2b80ae
SocketC/include/: syslog.h
SocketC/src/: addrinfo.h  error.c  unp.h  wrapsock.c  wrapunix.c
SocketC/src/client/: main.c
SocketC/src/server/: concurrent-server-unix.c  wrapsock.c  wrapunix.c
build-SocketC-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  Client2  ServerConcur  build.ninja  cmake_install.cmake
build-SocketC-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-70f70f8e46c48923378e.json  cache-v2-e9ca0b427fb59d06adf4.json  cmakeFiles-v1-aa4542bdba94a7d61721.json  cmakeFiles-v1-fc8efbf173709f1f21e1.json  codemodel-v2-07d9eff599be86760341.json  codemodel-v2-c8e6aa0baeeddfd11015.json  directory-.-Debug-668d675a08fa3a7f80c5.json  directory-.-Debug-b4b39fd5983fc7c2f48f.json  index-2025-11-06T07-12-35-0975.json  index-2025-11-06T08-20-51-0206.json  target-Client1-Debug-3fa4080cd6d7ec56e8d8.json  target-Client1-Debug-5d8491174ddb4e066413.json  target-Client2-Debug-923bc5448d87601f2b82.json  target-Client2-Debug-98a442649ec6db784aff.json  target-ServerConcur-Debug-8e9e5fee9579a7c1edfb.json  target-ServerConcur-Debug-b84085720efb6d9297ba.json  target-ServerIter-Debug-3a11c0958474feed46d5.json  target-ServerIter-Debug-b40d3d9e716148ae84c8.json
framework/: fwlog.h  json.hpp
src/: unp.h
src/client/: echo_client.c
src/server/: iterative-server.c  wraplib.c  wrapunix.c
unpv13e - Copy/: CMakeLists.txt
unpv13e - Copy/lib/: unp.h
